@startuml Groupify - Diagrammes UML

' ============================================
' DIAGRAMME DE CAS D'UTILISATION (Use Case)
' ============================================

skinparam packageStyle rectangle
skinparam usecaseBackgroundColor LightGreen
skinparam usecaseBorderColor DarkGreen
skinparam actorBackgroundColor LightBlue
skinparam actorBorderColor DarkBlue

title Diagramme de Cas d'Utilisation - Groupify

actor "Utilisateur" as User #LightBlue

rectangle "Gestion des Groupes" {
    usecase "Créer un groupe" as UC1 #LightGreen
    usecase "Lister les groupes" as UC2
    usecase "Modifier un groupe" as UC3
    usecase "Supprimer un groupe" as UC4
}

rectangle "Gestion des Contacts" {
    usecase "Créer un contact" as UC5 #LightGreen
    usecase "Lister les contacts" as UC6
    usecase "Modifier un contact" as UC7
    usecase "Supprimer un contact" as UC8
}

rectangle "Fonctionnalités Avancées" {
    usecase "Associer contact à groupe" as UC9 #LightGreen
    usecase "Filtrer par groupe" as UC10
    usecase "Rechercher contact" as UC11
    usecase "Afficher statistiques" as UC12
}

User --> UC1
User --> UC2
User --> UC3
User --> UC4

User --> UC5
User --> UC6
User --> UC7
User --> UC8

User --> UC9
User --> UC10
User --> UC11
User --> UC12

UC5 ..> UC9 : <<include>>
UC6 ..> UC10 : <<include>>
UC6 ..> UC11 : <<include>>
UC12 ..> UC2 : <<include>>
UC12 ..> UC6 : <<include>>

@enduml

' ============================================
' DIAGRAMME DE CLASSES (Class Diagram)
' ============================================

@startuml Groupify - Diagramme de Classes

skinparam classAttributeIconSize 0
skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #E3F2FD
skinparam classBorderColor #1976D2
skinparam arrowColor #1976D2

title Diagramme de Classes - Groupify

abstract class Model {
    # id: int
    # created_at: datetime
    # updated_at: datetime
}

class Group {
    - id: int
    - name: string
    - description: text
    - created_at: datetime
    - updated_at: datetime
    --
    + getContacts(): Collection
    + contactsCount(): int
}

class Contact {
    - id: int
    - name: string
    - email: string
    - phone: string
    - group_id: int
    - created_at: datetime
    - updated_at: datetime
    --
    + getGroup(): Group
}

class GroupController {
    + index(): View
    + create(): View
    + store(Request): Redirect
    + show(Group): View
    + edit(Group): View
    + update(Request, Group): Redirect
    + destroy(Group): Redirect
}

class ContactController {
    + index(Request): View
    + create(): View
    + store(Request): Redirect
    + show(Contact): View
    + edit(Contact): View
    + update(Request, Contact): Redirect
    + destroy(Contact): Redirect
    + byGroup(Group): View
}

class Route {
    + groups.index: string
    + groups.create: string
    + groups.store: string
    + groups.edit: string
    + groups.update: string
    + groups.destroy: string
    + contacts.index: string
    + contacts.create: string
    + contacts.store: string
    + contacts.edit: string
    + contacts.update: string
    + contacts.destroy: string
    + contacts.byGroup: string
    + home: string
}

' Relations d'héritage
Model <|-- Group
Model <|-- Contact

' Relations d'association
Group "1" *-- "*" Contact : possède

GroupController --> Group : utilise
ContactController --> Contact : utilise
ContactController --> Group : utilise

Route --> GroupController : définit
Route --> ContactController : définit

' Notes
note right of Group
  Attributs:
  - name: Nom du groupe (obligatoire)
  - description: Description optionnelle
  Relations:
  - hasMany Contacts
end note

note right of Contact
  Attributs:
  - name: Nom complet (obligatoire)
  - email: Adresse email (optionnel)
  - phone: Numéro de téléphone (optionnel)
  - group_id: Clé étrangère (optionnel)
  Relations:
  - belongsTo Group
end note

note bottom of GroupController
  Méthodes CRUD complètes
  + resource routes
end note

note bottom of ContactController
  Méthodes CRUD complètes
  + byGroup() pour filtrage
end note

@enduml

' ============================================
' DIAGRAMME DE SÉQUENCE (Sequence Diagram)
' ============================================

@startuml Groupify - Diagramme de Séquence

title Créer un Contact avec Association à un Groupe

actor "Utilisateur" as User
participant "ContactController" as Controller
participant "Contact" as Model
participant "Group" as Group
database "Base de données" as DB

User -> Controller : POST /contacts (données)
activate Controller

Controller -> Model : validate(données)
alt Validation réussie
    Controller -> Model : new Contact(données)

    alt Groupe spécifié
        Controller -> Group : find(group_id)
        Group --> Controller : Group instance
        Model --> Controller : group_id assigné
    end

    Controller -> DB : save(contact)
    DB --> Model : contact with ID
    Controller --> User : Redirect vers contacts.index
    Controller --> User : Flash message success
else Validation échouée
    Controller --> User : Redirect vers contacts.create
    Controller --> User : Flash message error
end

deactivate Controller

@enduml

' ============================================
' DIAGRAMME D'ACTIVITÉ (Activity Diagram)
' ============================================

@startuml Groupify - Diagramme d'Activité

title Processus de Gestion des Contacts

start
:Faire fonctionner l'application;
:Lister les contacts;

if (Filtrer par groupe ?) then (Oui)
    :Sélectionner un groupe;
    :Afficher contacts du groupe;
else (Non)
    :Afficher tous les contacts;
endif

if (Rechercher ?) then (Oui)
    :Entrer nom de contact;
    :Afficher résultats;
endif

:Faire fonctionner la liste;

if (Créer nouveau contact ?) then (Oui)
    :Remplir le formulaire;
    :Sélectionner groupe (optionnel);
    :Soumettre;
    if (Données valides ?) then (Oui)
        :Enregistrer en base;
        :Afficher succès;
    else (Non)
        :Afficher erreurs;
        :Retour au formulaire;
    endif
else (Non)
endif

if (Modifier contact ?) then (Oui)
    :Charger données existantes;
    :Modifier formulaire;
    :Soumettre;
    :Mettre à jour;
endif

if (Supprimer contact ?) then (Oui)
    :Confirmer suppression;
    :Supprimer de la base;
endif

stop

@enduml

